@@ -16,6 +16,7 @@
  */
 package org.apache.hadoop.security;
 
+import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertArrayEquals;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
@@ -32,6 +33,7 @@ import java.util.Collection;
 import java.util.LinkedHashSet;
 import java.util.Set;
 
+import javax.security.auth.Subject;
 import javax.security.auth.login.AppConfigurationEntry;
 
 import junit.framework.Assert;
@@ -339,4 +341,22 @@ public class TestUserGroupInformation {
       assertGaugeGt("loginFailure_avg_time", 0, rb);
     }
   }
+
+  /**
+   * Test for the case that UserGroupInformation.getCurrentUser()
+   * is called when the AccessControlContext has a Subject associated
+   * with it, but that Subject was not created by Hadoop (ie it has no
+   * associated User principal)
+   */
+   @Test
+   public void testUGIUnderNonHadoopContext() throws Exception {
+      Subject nonHadoopSubject = new Subject();
+      Subject.doAs(nonHadoopSubject, new PrivilegedExceptionAction<Void>() {
+            public Void run() throws IOException {
+               UserGroupInformation ugi = UserGroupInformation.getCurrentUser();
+               assertNotNull(ugi);
+               return null;
+            }
+         });
+   }
 }
